# ai-cost-calculator

./: .gitignore  AGENTS.md  LICENSE  README.md  setup-and-test-sdks.sh
configs/: config-schema.json  model-aliases.json  provider-pricing-mappings.json  response-mappings.json
node/: README.md  package-lock.json  package.json  tsconfig.json
python/: README.md  pyproject.toml
python/src/ai_cost_calculator/: __init__.py  errors.py  types.py  utils.py
python/src/ai_cost_calculator/calculator/: __init__.py  base.py  berri.py  best_effort.py  cost_utils.py  helicone.py  openrouter.py  portkey.py
python/src/ai_cost_calculator/data/: __init__.py  alias_builder.py  config_loader.py  model_resolver.py  response_transformer.py
python/src/ai_cost_calculator/providers/: __init__.py  berri_client.py  helicone_client.py  openrouter_client.py  portkey_client.py
python/src/llmcost/: types.py
python/src/llmcost/calculator/: __init__.py  base.py  berri.py  best_effort.py  openrouter.py  portkey.py
python/src/llmcost/data/: __init__.py  config_loader.py  model_resolver.py  response_transformer.py
python/src/llmcost/providers/: __init__.py  berri_client.py  openrouter_client.py  portkey_client.py
python/tests/: test_all_provider_usage.py  test_berri_client.py  test_cache_tokens.py  test_calculators.py  test_e2e_live.py  test_model_resolver.py  test_multi_model_calculators.py  test_openrouter_client.py  test_portkey_parser.py  test_provider_inference.py  test_response_transformer.py
python/tests/fixtures/: portkey-models.html
python/tests/post_publish/: smoke.py
(+42 files in other folders)
